name:                       opensandbox
version:                    0.0.1.2
synopsis:                   A custom Minecraft server
description:                Please see README.md
homepage:                   https://github.com/oldmanmike/opensandbox
bug-reports:                https://github.com/oldmanmike/opensandbox/issues
license:                    GPL-3
license-file:               LICENSE
author:                     Michael Carpenter
maintainer:                 Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:                  Copyright (C) 2016 Michael Carpenter
category:                   Game
build-type:                 Simple
extra-source-files:         README.md, LICENSE
cabal-version:              >=1.10

library
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    exposed-modules:        OpenSandbox
                            OpenSandbox.Block
                            OpenSandbox.CommandLine
                            OpenSandbox.Config
                            OpenSandbox.Effect
                            OpenSandbox.Entity
                            OpenSandbox.Item
                            OpenSandbox.Logger
                            OpenSandbox.Network
                            OpenSandbox.Protocol
                            OpenSandbox.Types
                            OpenSandbox.User
                            OpenSandbox.Version
                            OpenSandbox.Window
    build-depends:          aeson,
                            asn1-encoding,
                            asn1-types,
                            base,
                            bytes,
                            bytestring,
                            cereal,
                            cereal-conduit,
                            conduit,
                            conduit-extra,
                            containers,
                            cryptonite,
                            directory,
                            exceptions,
                            fast-logger,
                            old-locale,
                            optparse-applicative,
                            repa,
                            stm,
                            text,
                            thyme,
                            transformers,
                            uuid,
                            vector,
                            x509,
                            yaml
    default-language:       Haskell2010

executable server
    hs-source-dirs:         app
    main-is:                server.hs
    ghc-options:            -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    build-depends:          base,
                            directory,
                            opensandbox,
                            text
    default-language:       Haskell2010

executable client
    hs-source-dirs:         app
    main-is:                client.hs
    ghc-options:            -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    build-depends:          base,
                            gl,
                            linear,
                            opensandbox,
                            sdl2,
                            text
    default-language:       Haskell2010

test-suite opensandbox-test
    type:                   exitcode-stdio-1.0
    hs-source-dirs:         test
    main-is:                Spec.hs
    build-depends:          base,
                            bytestring,
                            cereal,
                            hspec,
                            opensandbox,
                            QuickCheck,
                            text,
                            uuid,
                            vector
    ghc-options:            -threaded -rtsopts -with-rtsopts=-N
    default-language:       Haskell2010

benchmark opensandbox-bench
    type:                   exitcode-stdio-1.0
    hs-source-dirs:         src, bench
    main-is:                BenchmarkSuite.hs
    build-depends:          base
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

source-repository head
    type:     git
    location: https://github.com/oldmanmike/opensandbox.git
