name:                       opensandbox
version:                    0.0.1.4
synopsis:                   A custom Minecraft server
description:                Please see README.md
homepage:                   https://github.com/oldmanmike/opensandbox
bug-reports:                https://github.com/oldmanmike/opensandbox/issues
license:                    GPL-3
license-file:               LICENSE
author:                     Michael Carpenter
maintainer:                 Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:                  Copyright (C) 2016 Michael Carpenter
category:                   Game
build-type:                 Simple
extra-source-files:         README.md, LICENSE
cabal-version:              >=1.10

library
    hs-source-dirs:         src
    ghc-options:            -Wall
    exposed-modules:        OpenSandbox
                            OpenSandbox.CommandLine
                            OpenSandbox.Config
                            OpenSandbox.Data
                            OpenSandbox.Data.Biome
                            OpenSandbox.Data.Block
                            OpenSandbox.Data.Effect
                            OpenSandbox.Data.Entity
                            OpenSandbox.Data.Instrument
                            OpenSandbox.Data.Item
                            OpenSandbox.Data.Protocol
                            OpenSandbox.Data.Protocol.Packet
                            OpenSandbox.Data.Protocol.Types
                            OpenSandbox.Logger
                            OpenSandbox.Network
                            OpenSandbox.User
                            OpenSandbox.Version
                            OpenSandbox.World
    build-depends:          aeson,
                            ansi-terminal,
                            asn1-encoding,
                            asn1-types,
                            array,
                            attoparsec,
                            base,
                            bytestring,
                            conduit,
                            conduit-extra,
                            containers,
                            cryptonite,
                            deepseq,
                            directory,
                            exceptions,
                            fast-logger,
                            minecraft-nbt,
                            monad-logger,
                            optparse-applicative,
                            path,
                            scientific,
                            stm,
                            text,
                            time,
                            transformers,
                            unordered-containers,
                            uuid,
                            vector,
                            x509,
                            yaml
    default-language:       Haskell2010

executable server
    hs-source-dirs:         app
    main-is:                server.hs
    ghc-options:            -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    build-depends:          aeson,
                            base,
                            bytestring,
                            directory,
                            opensandbox,
                            path,
                            text
    default-language:       Haskell2010


test-suite opensandbox-test
    type:                   exitcode-stdio-1.0
    hs-source-dirs:         test
    main-is:                Spec.hs
    build-depends:          array,
                            attoparsec,
                            base,
                            bytestring,
                            hspec,
                            minecraft-nbt,
                            opensandbox,
                            QuickCheck,
                            text,
                            uuid,
                            vector
    ghc-options:            -threaded -rtsopts -with-rtsopts=-N
    default-language:       Haskell2010

benchmark opensandbox-bench
    type:                   exitcode-stdio-1.0
    hs-source-dirs:         src, bench
    main-is:                BenchmarkSuite.hs
    build-depends:          base
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

source-repository head
    type:     git
    location: https://github.com/oldmanmike/opensandbox.git
