name:                       opensandbox
version:                    0.0.1.6
synopsis:                   A custom Minecraft server
description:                Please see README.md
homepage:                   https://github.com/oldmanmike/opensandbox
bug-reports:                https://github.com/oldmanmike/opensandbox/issues
license:                    GPL-3
license-file:               LICENSE
author:                     Michael Carpenter
maintainer:                 Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:                  Copyright (C) 2016 Michael Carpenter
category:                   Game
build-type:                 Simple
extra-source-files:         README.md, LICENSE
cabal-version:              >=1.10

library
    hs-source-dirs:         src
    ghc-options:            -Wall
    exposed-modules:        OpenSandbox
                            OpenSandbox.CommandLine
                            OpenSandbox.Config
                            OpenSandbox.Data
                            OpenSandbox.Data.Biome
                            OpenSandbox.Data.Block
                            OpenSandbox.Data.Effect
                            OpenSandbox.Data.Entity
                            OpenSandbox.Data.Instrument
                            OpenSandbox.Data.Item
                            OpenSandbox.Data.Yggdrasil
                            OpenSandbox.Event
                            OpenSandbox.Logger
                            OpenSandbox.Network
                            OpenSandbox.Protocol
                            OpenSandbox.Protocol.Compression
                            OpenSandbox.Protocol.Encryption
                            OpenSandbox.Protocol.Packet
                            OpenSandbox.Protocol.Types
                            OpenSandbox.Rules
                            OpenSandbox.Server
                            OpenSandbox.Time
                            OpenSandbox.User
                            OpenSandbox.Version
                            OpenSandbox.World
                            OpenSandbox.World.Chunk
                            OpenSandbox.World.Flat

    build-depends:          aeson,
                            ansi-terminal,
                            asn1-encoding,
                            asn1-types,
                            attoparsec,
                            base,
                            bytestring,
                            cereal,
                            cereal-conduit,
                            conduit,
                            conduit-extra,
                            containers,
                            cryptonite,
                            deepseq,
                            directory,
                            exceptions,
                            fast-logger,
                            hashable,
                            memory,
                            monad-logger,
                            nbt,
                            optparse-applicative,
                            path,
                            scientific,
                            stm,
                            text,
                            time,
                            transformers,
                            unordered-containers,
                            uuid,
                            vector,
                            x509,
                            yaml,
                            zlib
    default-language:       Haskell2010

executable server
    hs-source-dirs:         app
    main-is:                server.hs
    ghc-options:            -Wall -threaded -O2 -rtsopts -with-rtsopts=-N -with-rtsopts=-T
    build-depends:          aeson,
                            base,
                            bytestring,
                            containers,
                            directory,
                            ekg,
                            opensandbox,
                            path,
                            stm,
                            text,
                            unordered-containers
    default-language:       Haskell2010


test-suite opensandbox-test
    type:                   exitcode-stdio-1.0
    hs-source-dirs:         test
    main-is:                Spec.hs
    other-modules:          Common
                            Data.NBTSpec
                            OpenSandbox.CommandLineSpec
                            OpenSandbox.ConfigSpec
                            OpenSandbox.Data.BiomeSpec
                            OpenSandbox.Data.BlockSpec
                            OpenSandbox.Data.EffectSpec
                            OpenSandbox.Data.EntitySpec
                            OpenSandbox.Data.InstrumentSpec
                            OpenSandbox.Data.ItemSpec
                            OpenSandbox.Data.YggdrasilSpec
                            OpenSandbox.LoggerSpec
                            OpenSandbox.NetworkSpec
                            OpenSandbox.Protocol.PacketSpec
                            OpenSandbox.Protocol.TypesSpec
                            OpenSandbox.UserSpec
                            OpenSandbox.World.ChunkSpec
                            OpenSandbox.World.FlatSpec

    build-depends:          array,
                            base,
                            bytestring,
                            cereal,
                            generic-random,
                            hspec,
                            nbt,
                            opensandbox,
                            QuickCheck,
                            text,
                            uuid,
                            vector
    ghc-options:            -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:       Haskell2010

benchmark opensandbox-bench
    type:                   exitcode-stdio-1.0
    hs-source-dirs:         src, bench
    main-is:                BenchmarkSuite.hs
    build-depends:          base
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

source-repository head
    type:     git
    location: https://github.com/oldmanmike/opensandbox.git
